tests/focus-check/focus-check.exp

Stop any already-running server.
Full check:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error -------------------------------------------------------- dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string is incompatible with number.

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2].
  References:
    4: x = 3 + "string";
           ^^^^^^^^^^^^ [1]: string
    3: var x: number = 3;
              ^^^^^^ [2]: number

Error --------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number is incompatible with string.

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ Cannot assign `123` to `x` because number [1] is incompatible with string [2].
  References:
    3: var x: string = 123; // Error
                       ^^^ [1]: number
    3: var x: string = 123; // Error
              ^^^^^^ [2]: string

Error -------------------------------------------------------------- test.js:3:2

Cannot cast empty string to number because string is incompatible with number.

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast empty string to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 4 errors

Full focus-check:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error -------------------------------------------------------- dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string is incompatible with number.

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2].
  References:
    4: x = 3 + "string";
           ^^^^^^^^^^^^ [1]: string
    3: var x: number = 3;
              ^^^^^^ [2]: number

Error --------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number is incompatible with string.

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ Cannot assign `123` to `x` because number [1] is incompatible with string [2].
  References:
    3: var x: string = 123; // Error
                       ^^^ [1]: number
    3: var x: string = 123; // Error
              ^^^^^^ [2]: string

Error -------------------------------------------------------------- test.js:3:2

Cannot cast empty string to number because string is incompatible with number.

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast empty string to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 4 errors

Focused check on a file with local errors but no dependency or reverse dependency:
Error -------------------------------------------------------------- test.js:3:2

Cannot cast empty string to number because string is incompatible with number.

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast empty string to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 1 error

Focused check on a file with no local errors but a dependency:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number


Found 1 error

Focused check on a file with no local errors but a reverse dependency:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number


Found 1 error

Focused check on two files with overlapping errors:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number


Found 1 error

Focused check on multiple files with disjoint sets of errors:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error -------------------------------------------------------------- test.js:3:2

Cannot cast empty string to number because string is incompatible with number.

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast empty string to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 2 errors

Focused check on a file and a directory:
Error -------------------------------------------------------- dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string is incompatible with number.

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2].
  References:
    4: x = 3 + "string";
           ^^^^^^^^^^^^ [1]: string
    3: var x: number = 3;
              ^^^^^^ [2]: number

Error -------------------------------------------------------------- test.js:3:2

Cannot cast empty string to number because string is incompatible with number.

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast empty string to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 2 errors

Focused check on files specified in list.txt:
Error ----------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string is incompatible with number.

Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: module.exports = "";
                        ^^ [1]: string. See: b.js:3
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error -------------------------------------------------------- dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string is incompatible with number.

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2].
  References:
    4: x = 3 + "string";
           ^^^^^^^^^^^^ [1]: string
    3: var x: number = 3;
              ^^^^^^ [2]: number


Found 2 errors

Focused check guessing root by looking at first file:
Error ----------------------------------- other_root/other_root_dependent.js:5:2

Cannot cast `foo` to string because number is incompatible with string.

Error: other_root/other_root_dependent.js:5
  5: (foo: string); // Error
      ^^^ Cannot cast `foo` to string because number [1] is incompatible with string [2].
  References:
    5: export default 123;
                      ^^^ [1]: number. See: other_root/other_root_file.js:5
    5: (foo: string); // Error
             ^^^^^^ [2]: string

Error --------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number is incompatible with string.

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ Cannot assign `123` to `x` because number [1] is incompatible with string [2].
  References:
    3: var x: string = 123; // Error
                       ^^^ [1]: number
    3: var x: string = 123; // Error
              ^^^^^^ [2]: string


Found 2 errors

Focused check with explicit root:
Error --------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number is incompatible with string.

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ Cannot assign `123` to `x` because number [1] is incompatible with string [2].
  References:
    3: var x: string = 123; // Error
                       ^^^ [1]: number
    3: var x: string = 123; // Error
              ^^^^^^ [2]: string


Found 1 error

Done!
